# Assessment-RappiMakers-Day

./: .gitignore  DATA_REFERENCE.md  Mian.py  availability_clean.parquet  frontend.py  mensaje  pyproject.toml  test.py
app/: agent.py  config.py  data.py  main.py
frontend/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/data/: route.ts
frontend/components/dashboard/: availability-chart.tsx  chatbot.tsx  dashboard-content.tsx  dashboard-header.tsx  dynamic-chart.tsx  heatmap-chart.tsx  hourly-avg-chart.tsx  kpi-cards.tsx  source-comparison-chart.tsx  source-filter.tsx  source-stats-table.tsx
frontend/lib/: data.ts
frontend/scripts/: parse-csv.js
